Moved showall-selector outside of the table to prevent unnecessary word wrapping

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -169,6 +169,12 @@
         margin-top: 1rem;
     }
 
+    .showall-selector {
+        width: 100%;
+        text-align: left;
+        font-size: smaller;
+        padding-top: 1rem;
+    }
 }
 
 
@@ -245,11 +251,6 @@
         }
     }
 
-    .showall-selector {
-        text-align: left;
-        font-size: smaller;
-        padding-top: 1rem;
-    }
 
     .automatch-challenge-row {
         .cell {
